removing all pos:absolute/relative for wrap,app,main containers so the content just flows all natural-like. also making sidebar/modals pos:fixed. not only is this more correct, but fixes some weird issues im seeing on ios. bo!

--- a/css/modules/modal.less
+++ b/css/modules/modal.less
@@ -1,6 +1,6 @@
 @import 'variables';
 
-.turtl-modal {position: absolute; top: 0; left: 100%; z-index: 20; width: 100%; height: 100%; overflow-x: hidden; background: @theme_gutter; .transition(left .3s); background: #fff; .layer-hover(); .touch-scroll();}
+.turtl-modal {position: fixed; top: 0; left: 100%; z-index: 20; width: 100%; height: 100%; overflow-x: hidden; background: @theme_gutter; .transition(left .3s); background: #fff; .layer-hover(); .touch-scroll();}
 .turtl-modal.active {left: 0%;}
 .turtl-modal {
 	header {background: rgba(red(@theme_black), green(@theme_black), blue(@theme_black), .8);}
