--- a/css/template.less
+++ b/css/template.less
@@ -25,10 +25,10 @@ a { text-decoration: none; }
 @font-face {font-family: 'Raleway'; font-style: normal; font-weight: 600; src: local('Raleway SemiBold'), local('Raleway-SemiBold'), url(../images/font/raleway-semibold.woff) format('woff');}
 
 //#wrap {position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow-y: scroll;}
-#wrap {position: absolute; width: 100%; min-height: 100%; overflow-x: hidden; .hide-scroll();}
+#wrap {}
 #sidebar {position: fixed; z-index: 12; left: -100%; width: 100%; height: 100%; .transition(left .3s);}
-#app {position: relative; z-index: 10; top: 0; left: 0; width: 100%; min-height: 100%; .transition(left .3s);}
-#main {position: absolute; top: @header_height; left: 0; width: 100%; padding: 0 0 64rem 0; .transition(left .3s);}
+#app {.transition(left .3s);}
+#main {padding: @header_height 0 64rem 0; .transition(left .3s);}
 
 @header_pad_top: 4rem;
 header {position: fixed; z-index: 13; width: 100%; height: (@header_height - @header_pad_top); margin: 0 0 0 0; padding: @header_pad_top 0 0 0; background: #222; .layer-rest();}
@@ -82,3 +82,5 @@ body.settings {
 body.page-slide {overflow: hidden;}
 body.page-slide #tmp-slide {display: block;}
 
+body.settings,
+body.modal {overflow-y: hidden !important;}
